feat: Manual Verification HQ #3

--- a/src/app/pages/dte/schedule-program/create/schedule-program-create.component.html
+++ b/src/app/pages/dte/schedule-program/create/schedule-program-create.component.html
@@ -56,12 +56,12 @@
                 </div>
                 <div fxFlex="80" fxLayout="row wrap" fxLayoutAlign="end center" fxLayout.lt-md="column"
                   fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
-                  <h3 *ngIf="isIRTemplate">
+                  <!-- <h3 *ngIf="isIRTemplate">
                     <mat-slide-toggle formControlName="is_verification_ir_toggle" (change)="isVerifIR($event, i)">
                       Verifikasi Oleh IR</mat-slide-toggle>
-                  </h3>
+                  </h3> -->
                   <h3>
-                    <mat-slide-toggle formControlName="is_verification_hq_toggle" (change)="isVerifHQ($event, i)">
+                    <mat-slide-toggle formControlName="is_verification_hq" (change)="isVerifHQ($event, i)">
                       Verifikasi Oleh HQ</mat-slide-toggle>
                   </h3>
                   <h3>
