--- a/src/app/pages/dte/schedule-program/detail/schedule-program-detail.component.scss
+++ b/src/app/pages/dte/schedule-program/detail/schedule-program-detail.component.scss
@@ -1,7 +1,7 @@
 @import "src/@fuse/scss/fuse";
 
 .template-task {
-  background: #3a3a3a;
-  color: white;
+  background: #dcdcdc;
+  color: #000;
   padding: 0 24px;
 }
