--- a/src/app/shared/confirmation-dialog/confirmation-dialog.component.scss
+++ b/src/app/shared/confirmation-dialog/confirmation-dialog.component.scss
@@ -14,6 +14,9 @@
     &.reject {
       background-color: #DC1E2D;
     }
+    &.disable {
+      background-color: #ddd;
+    }
     padding: 0 12px;
     color: #fff;
     min-height: 36px;
@@ -22,4 +25,14 @@
       width: 40%;
     }
   }
+}
+
+.radio-layout {
+  padding: 12px;
+  border: 1px solid #dcdcdc;
+  border-radius: 5px;
+}
+
+button[disabled] {
+  cursor: no-drop;
 }
