feat: Manual Verification HQ #6 - export misi

--- a/src/app/pages/dte/task-verification/detail/task-verification-detail.component.html
+++ b/src/app/pages/dte/task-verification/detail/task-verification-detail.component.html
@@ -248,11 +248,13 @@
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                 <div class="button-row" style="margin-left: -10px">
                   <button type="button" mat-icon-button matTooltip="Verifikasi Misi" (click)="openConfirmDialog(row, 'Verifikasi Misi')" [disabled]="row.status_misi == 'not-submitted' || row.status_misi !== 'submitted' && row.status_coin !== 'belum dikirim' || row.status_coin == 'sudah dikirim'">
-                    <mat-icon class="secondary-text">assignment_turned_in</mat-icon>
+                    <mat-icon *ngIf="row.status_misi == 'submitted' && row.status_coin !== 'sudah dikirim'" class="orange-500-fg">assignment_turned_in</mat-icon>
+                    <mat-icon *ngIf="row.status_misi == 'not-submitted' || row.status_misi !== 'submitted' && row.status_coin !== 'belum dikirim' || row.status_coin == 'sudah dikirim'" class="secondary-text">assignment_turned_in</mat-icon>
                   </button>
 
                   <button type="button" mat-icon-button matTooltip="Release Coin" (click)="openConfirmDialog(row, 'Release Coin')" [disabled]="row.status_misi !== 'approved' || row.status_coin == 'sudah dikirim'">
-                    <mat-icon class="secondary-text">call_made</mat-icon>
+                    <mat-icon *ngIf="row.status_misi == 'approved' && row.status_coin !== 'sudah dikirim'" class="orange-500-fg">call_made</mat-icon>
+                    <mat-icon *ngIf="row.status_misi !== 'approved' || row.status_coin == 'sudah dikirim'" class="secondary-text">call_made</mat-icon>
                   </button>
                 </div>
               </ng-template>
