--- a/src/app/pages/dte/task-verification/index/task-verification-index.component.html
+++ b/src/app/pages/dte/task-verification/index/task-verification-index.component.html
@@ -126,21 +126,23 @@
                 [routerLink]="['/dte', 'taskverification', 'detail', row.id, row.scheduler_templates_id]">
                 <mat-icon class="secondary-text">assignment</mat-icon>
               </button>
-              <button type="button" mat-icon-button color=""
+              <!-- <button type="button" mat-icon-button color=""
                 [routerLink]="['/dte', 'taskverification', 'edit', row.id]"
                 [disabled]="row?.status_berjalan !== 'no' || !permission?.ubah" matTooltip="Ubah Tanggal Penjadwalan">
                 <mat-icon class="secondary-text">update</mat-icon>
-              </button>
-              <button type="button" mat-icon-button color="" [disabled]="row.status_audience !== 'approved'"
-                matTooltip="Eksport Trade Program" (click)="export(row)">
-                <mat-icon *ngIf="row.status_audience === 'approved'" class="orange-500-fg">save_alt</mat-icon>
-                <mat-icon *ngIf="row.status_audience !== 'approved'" class="secondary-text">save_alt</mat-icon>
+              </button> -->
+              <button type="button" mat-icon-button color="" [disabled]="row.status_coin !== 'Sudah Dikirim'"
+                matTooltip="Export Misi" (click)="export(row)">
+                <mat-icon *ngIf="row.status_coin === 'Sudah Dikirim'" class="orange-500-fg">save_alt</mat-icon>
+                <mat-icon *ngIf="row.status_coin !== 'Sudah Dikirim'" class="secondary-text">save_alt</mat-icon>
               </button>
               <button type="button" mat-icon-button color="" matTooltip="Verified All" (click)="openConfirmDialog(row, 'Verification All Mission')" [disabled]="row.status_scheduler !== 'publish' || row.status_coin == 'Sudah Dikirim'">
-                <mat-icon class="secondary-text">assignment_turned_in</mat-icon>
+                <mat-icon *ngIf="row.status_scheduler == 'publish' && row.status_coin !== 'Sudah Dikirim'" class="orange-500-fg">assignment_turned_in</mat-icon>
+                <mat-icon *ngIf="row.status_scheduler !== 'publish' || row.status_coin == 'Sudah Dikirim'" class="secondary-text">assignment_turned_in</mat-icon>
               </button>
               <button type="button" mat-icon-button color="" matTooltip="Release Coin" (click)="openConfirmDialog(row, 'Release Coin On Index')" [disabled]="row.status_scheduler !== 'publish' || row.status_coin == 'Sudah Dikirim'">
-                <mat-icon class="secondary-text">call_made</mat-icon>
+                <mat-icon *ngIf="row.status_scheduler == 'publish' && row.status_coin !== 'Sudah Dikirim'" class="orange-500-fg">call_made</mat-icon>
+                <mat-icon *ngIf="row.status_scheduler !== 'publish' || row.status_coin == 'Sudah Dikirim'" class="secondary-text">call_made</mat-icon>
               </button>
               <!-- <button type="button" mat-icon-button color="primary"
                 [disabled]="row.status_scheduler === 'publish' || !permission?.hapus" matTooltip="Hapus"
