feat: Manual Verification HQ #7 - detail submission - permission - styling fixes

--- a/src/app/pages/settings/role/edit/role-edit.component.html
+++ b/src/app/pages/settings/role/edit/role-edit.component.html
@@ -82,12 +82,44 @@
             <div class="title" fxFlex="100">{{role.nama | toCapitalize}}</div>
 
             <div class="item" fxFlex="100" fxFlex.gt-xs="30" *ngFor="let items of role.menu; let i = index;" [ngClass]="i%3 !== 2 ? 'line' : ''">
-              <div class="question">{{items.nama | toCapitalize}}</div>
-              <div class="answer">
+              <div class="question" *ngIf="items.nama !== 'task verification'">{{items.nama | toCapitalize}}</div>
+              <div class="answer" *ngIf="items.nama !== 'task verification'">
                 <div fxLayout="row wrap" fxLayoutAlign="start center">
                   <div fxFlex="25" *ngFor="let item of items.value">
                     <div class="access-name">{{item.nama | toCapitalize}}</div>
                     <mat-slide-toggle class="example-margin" [color]="'primary'" [(ngModel)]="item.status" [disabled]="isDetail"></mat-slide-toggle>
+                  </div>
+                </div>
+              </div>
+
+              <div class="question" *ngIf="items.nama == 'task verification'">{{'Verifikasi Misi' | toCapitalize}}</div>
+              <div class="answer mb-16" *ngIf="items.nama == 'task verification'">
+                <div fxLayout="row wrap" fxLayoutAlign="start center">
+                  <div fxFlex="25">
+                    <div class="access-name">{{items.value[0].nama | toCapitalize}}</div>
+                    <mat-slide-toggle class="example-margin" [color]="'primary'" [(ngModel)]="items.value[0].status" [disabled]="isDetail"></mat-slide-toggle>
+                  </div>
+                  <div fxFlex="25">
+                    <div class="access-name">{{items.value[1].nama | toCapitalize}}</div>
+                    <mat-slide-toggle class="example-margin" [color]="'primary'" [(ngModel)]="items.value[1].status" [disabled]="isDetail"></mat-slide-toggle>
+                  </div>
+                </div>
+              </div>
+              <div class="question" *ngIf="items.nama == 'task verification'">{{'Verifikasi Misi - All' | toCapitalize}}</div>
+              <div class="answer mb-16" *ngIf="items.nama == 'task verification'">
+                <div fxLayout="row wrap" fxLayoutAlign="start center">
+                  <div fxFlex="25">
+                    <div class="access-name">{{items.value[2].nama | toCapitalize}}</div>
+                    <mat-slide-toggle class="example-margin" [color]="'primary'" [(ngModel)]="items.value[2].status" [disabled]="isDetail"></mat-slide-toggle>
+                  </div>
+                </div>
+              </div>
+              <div class="question" *ngIf="items.nama == 'task verification'">{{'Release Coin' | toCapitalize}}</div>
+              <div class="answer" *ngIf="items.nama == 'task verification'">
+                <div fxLayout="row wrap" fxLayoutAlign="start center">
+                  <div fxFlex="25">
+                    <div class="access-name">{{items.value[3].nama | toCapitalize}}</div>
+                    <mat-slide-toggle class="example-margin" [color]="'primary'" [(ngModel)]="items.value[3].status" [disabled]="isDetail"></mat-slide-toggle>
                   </div>
                 </div>
               </div>
