--- a/src/app/pages/dte/task-verification/detail/task-verification-detail.component.html
+++ b/src/app/pages/dte/task-verification/detail/task-verification-detail.component.html
@@ -247,14 +247,14 @@
             <ngx-datatable-column name="Action" [sortable]="false">
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                 <div class="button-row" style="margin-left: -10px">
-                  <button type="button" mat-icon-button matTooltip="Verifikasi Misi" (click)="openConfirmDialog(row, 'Verifikasi Misi')" [disabled]="row.status_misi == 'not-submitted' || row.status_misi !== 'submitted' && row.status_coin !== 'belum dikirim' || row.status_coin == 'sudah dikirim'">
-                    <mat-icon *ngIf="row.status_misi == 'submitted' && row.status_coin !== 'sudah dikirim'" class="orange-500-fg">assignment_turned_in</mat-icon>
-                    <mat-icon *ngIf="row.status_misi == 'not-submitted' || row.status_misi !== 'submitted' && row.status_coin !== 'belum dikirim' || row.status_coin == 'sudah dikirim'" class="secondary-text">assignment_turned_in</mat-icon>
+                  <button type="button" mat-icon-button matTooltip="Verifikasi Misi" (click)="openConfirmDialog(row, 'Verifikasi Misi')" [disabled]="row.status_misi == 'not-submitted' || row.status_misi !== 'submitted' && row.status_coin !== 'belum dikirim' || row.status_coin == 'sudah dikirim' || !permissionVerifikasiMisi?.ubah">
+                    <mat-icon *ngIf="row.status_misi == 'submitted' && row.status_coin !== 'sudah dikirim' && permissionVerifikasiMisi?.ubah || row.status_misi !== 'not-submitted' && row.status_coin == 'belum dikirim' && permissionVerifikasiMisi?.ubah" class="orange-500-fg">assignment_turned_in</mat-icon>
+                    <mat-icon *ngIf="row.status_misi == 'not-submitted' || row.status_misi !== 'submitted' && row.status_coin !== 'belum dikirim' || row.status_coin == 'sudah dikirim' || !permissionVerifikasiMisi?.ubah" class="secondary-text">assignment_turned_in</mat-icon>
                   </button>
 
-                  <button type="button" mat-icon-button matTooltip="Release Coin" (click)="openConfirmDialog(row, 'Release Coin')" [disabled]="row.status_misi !== 'approved' || row.status_coin == 'sudah dikirim'">
-                    <mat-icon *ngIf="row.status_misi == 'approved' && row.status_coin !== 'sudah dikirim'" class="orange-500-fg">call_made</mat-icon>
-                    <mat-icon *ngIf="row.status_misi !== 'approved' || row.status_coin == 'sudah dikirim'" class="secondary-text">call_made</mat-icon>
+                  <button type="button" mat-icon-button matTooltip="Release Coin" (click)="openConfirmDialog(row, 'Release Coin')" [disabled]="row.status_misi !== 'approved' || row.status_coin == 'sudah dikirim' || !permissionReleaseCoin?.ubah">
+                    <mat-icon *ngIf="row.status_misi == 'approved' && row.status_coin !== 'sudah dikirim' && permissionReleaseCoin?.ubah" class="orange-500-fg">call_made</mat-icon>
+                    <mat-icon *ngIf="row.status_misi !== 'approved' || row.status_coin == 'sudah dikirim' || !permissionReleaseCoin?.ubah" class="secondary-text">call_made</mat-icon>
                   </button>
                 </div>
               </ng-template>
