--- a/src/app/pages/dte/task-verification/dialog/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/pages/dte/task-verification/dialog/confirm-dialog/confirm-dialog.component.html
@@ -77,8 +77,9 @@
   </div>
 
   <div *ngIf="data.popupType == 'Verifikasi Misi'">
-    <mat-toolbar matDialogTitle class="m-0" fxFlex="1 0 auto" fxLayout="row">
-      <div fxFlex fxLayout="row" fxLayoutAlign="space-between center">
+    <mat-toolbar matDialogTitle class="m-0 header-vm" fxFlex="1 0 auto" fxLayout="row" [ngStyle]="{'background-image': 'url(' + environment?.backgroundImage + ')'}">
+      <div fxFlex fxLayout="row" fxLayoutAlign="start center">
+        <img class="logo-icon" src="assets/images/ayo/Horizontal_(Alt_White)@2x.png" srcset="assets/images/ayo/Horizontal_(Alt_White)@2x.png 2x">
       </div>
       <!-- CLOSE DIALOG BUTTON -->
       <button mat-icon-button (click)="dialogRef.close()" aria-label="Close Dialog">
@@ -87,13 +88,12 @@
       <!-- / CLOSE DIALOG BUTTON -->
   
     </mat-toolbar>
-    <div class="p-16" fusePerfectScrollbar *ngIf="dataSubmission !== null">
-      <div *ngIf="dataSubmission.data.image">
+    <div class="p-16" fusePerfectScrollbar *ngIf="dataSubmission !== null" style="max-height: 600px;">
+      <div *ngIf="dataSubmission.data.image" class="mb-8">
         <img src="{{dataSubmission.data.image}}"/>
       </div>
-      <div fxLayout="row" fxLayoutAlign="start center" >
-        {{dataSubmission.data.name}}
-      </div>
+      <div fxLayout="row" fxLayoutAlign="start center" style="font-size: 16px;">
+        {{dataSubmission.data.name}} </div>
       <div fxLayout="row" fxLayoutAlign="start center" class="title">
        Deadline
       </div>
@@ -109,20 +109,53 @@
       <div fxLayout="row" fxLayoutAlign="start center" class="title">
         Coin yang akan diperoleh
       </div>
-      <div fxLayout="row" fxLayoutAlign="start center" class="desc">
-        {{dataSubmission.data.coin_approved}}
+      <div fxLayout="row" fxLayoutAlign="start center" class="desc coin">
+        <img src="assets/images/ayo/coin.png" width="20" height="20" class="mr-8"/> {{dataSubmission.data.coin_approved}}
       </div>
       <div *ngFor="let item of dataSubmission.data.submission; let i = index;" fxLayout="row" fxLayoutAlign="start start" class="info mb-8">
         <div class="number" fxLayout="column" fxLayoutAlign="start start">{{i + 1}}.</div>
         <div class="question" fxLayout="column" fxLayoutAlign="start start">
+          <video [src]="item.question_video" *ngIf="item.question_video" height="200" controls class="mb-8"></video>
+          <img [src]="item.question_image" *ngIf="item.question_image" class="answer-img mb-8"/>
           <span>{{item.question}}</span>
-          <div *ngIf="item.type == 'radio'">
-            <mat-radio-group fxLayout="column" fxLayoutAlign="start start">
-              <mat-radio-button class="radio-button pr-20" *ngFor="let questions of dataSubmission.data.submission[i].additional" checked="false">
-                {{questions}}
-              </mat-radio-button>
-            </mat-radio-group>
+          <div *ngIf="item.type == 'radio'" fxLayout="column" fxLayoutAlign="start start">
+            <div *ngFor="let answer of item.additional;" fxFlex="100" fxLayout="row" fxLayoutAlign="start center">
+                <mat-icon class="secondary-text" fxFlex="5" *ngIf="answer !== item.answer[0]">
+                  {{item.type === 'radio' ? 'radio_button_unchecked' : 'check_box_outline_blank'}}
+                </mat-icon>
+                <mat-icon class="secondary-text" fxFlex="5" *ngIf="answer === item.answer[0]">
+                  {{item.type === 'radio' ? 'radio_button_checked' : 'check_box_outline'}}
+                </mat-icon>
+                <div>
+                  {{answer}}
+                </div>
+            </div>
           </div>
+
+          <div *ngIf="item.type == 'checkbox'" fxLayout="column" fxLayoutAlign="start start">
+            <div *ngFor="let answer of item.answer;" fxFlex="100" fxLayout="row" fxLayoutAlign="start center">
+                <!-- <mat-icon class="secondary-text" fxFlex="5" *ngIf="answer !== dataSubmission.data.submission[i].answer[0]">
+                  {{'check_box_outline_blank'}}
+                </mat-icon> -->
+                <mat-icon class="secondary-text" fxFlex="5">
+                  {{'check_box_outline'}}
+                </mat-icon>
+                <div>
+                  {{answer}}
+                </div>
+            </div>
+          </div>
+
+          <div *ngIf="item.type == 'text' || item.type == 'textarea' || item.type == 'numeric' || item.type == 'date' || item.type == 'stock_check'" fxLayout="column" fxLayoutAlign="start start">
+            <div>
+              {{dataSubmission.data.submission[i].answer[0]}}
+            </div>
+          </div>
+
+          <div *ngIf="item.type == 'image'" fxLayout="column" fxLayoutAlign="start start">
+            <img src="{{item.answer_image}}" class="answer-img"/>
+          </div>
+
         </div>
       </div>
     </div>
