--- a/src/app/pages/dte/task-verification/index/task-verification-index.component.html
+++ b/src/app/pages/dte/task-verification/index/task-verification-index.component.html
@@ -123,24 +123,25 @@
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="button-row" style="margin-left: -10px">
               <button type="button" mat-icon-button color="" matTooltip="Lihat"
-                [routerLink]="['/dte', 'taskverification', 'detail', row.id, row.scheduler_templates_id]">
+                [routerLink]="['/dte', 'taskverification', 'detail', row.id, row.scheduler_templates_id]"
+                [disabled]="!permissionVerifikasiMisi?.lihat">
                 <mat-icon class="secondary-text">assignment</mat-icon>
               </button>
-              <!-- <button type="button" mat-icon-button color=""
+              <button type="button" mat-icon-button color=""
                 [routerLink]="['/dte', 'taskverification', 'edit', row.id]"
                 [disabled]="row?.status_berjalan !== 'no' || !permission?.ubah" matTooltip="Ubah Tanggal Penjadwalan">
                 <mat-icon class="secondary-text">update</mat-icon>
-              </button> -->
+              </button>
               <button type="button" mat-icon-button color="" [disabled]="row.status_coin !== 'Sudah Dikirim'"
                 matTooltip="Export Misi" (click)="export(row)">
                 <mat-icon *ngIf="row.status_coin === 'Sudah Dikirim'" class="orange-500-fg">save_alt</mat-icon>
                 <mat-icon *ngIf="row.status_coin !== 'Sudah Dikirim'" class="secondary-text">save_alt</mat-icon>
               </button>
-              <button type="button" mat-icon-button color="" matTooltip="Verified All" (click)="openConfirmDialog(row, 'Verification All Mission')" [disabled]="row.status_scheduler !== 'publish' || row.status_coin == 'Sudah Dikirim'">
+              <button type="button" mat-icon-button color="" matTooltip="Verified All" (click)="openConfirmDialog(row, 'Verification All Mission')" [disabled]="row.status_scheduler !== 'publish' || row.status_coin == 'Sudah Dikirim' || !permissionVerifikasiMisiAll?.ubah">
                 <mat-icon *ngIf="row.status_scheduler == 'publish' && row.status_coin !== 'Sudah Dikirim'" class="orange-500-fg">assignment_turned_in</mat-icon>
                 <mat-icon *ngIf="row.status_scheduler !== 'publish' || row.status_coin == 'Sudah Dikirim'" class="secondary-text">assignment_turned_in</mat-icon>
               </button>
-              <button type="button" mat-icon-button color="" matTooltip="Release Coin" (click)="openConfirmDialog(row, 'Release Coin On Index')" [disabled]="row.status_scheduler !== 'publish' || row.status_coin == 'Sudah Dikirim'">
+              <button type="button" mat-icon-button color="" matTooltip="Release Coin" (click)="openConfirmDialog(row, 'Release Coin On Index')" [disabled]="row.status_scheduler !== 'publish' || row.status_coin == 'Sudah Dikirim' || !permissionReleaseCoin?.ubah">
                 <mat-icon *ngIf="row.status_scheduler == 'publish' && row.status_coin !== 'Sudah Dikirim'" class="orange-500-fg">call_made</mat-icon>
                 <mat-icon *ngIf="row.status_scheduler !== 'publish' || row.status_coin == 'Sudah Dikirim'" class="secondary-text">call_made</mat-icon>
               </button>
