feat: Manual Verification HQ #8 - disable button verif n release coin on null status -setPage

--- a/src/app/pages/dte/task-verification/index/task-verification-index.component.html
+++ b/src/app/pages/dte/task-verification/index/task-verification-index.component.html
@@ -137,13 +137,13 @@
                 <mat-icon *ngIf="row.status_coin === 'Sudah Dikirim'" class="orange-500-fg">save_alt</mat-icon>
                 <mat-icon *ngIf="row.status_coin !== 'Sudah Dikirim'" class="secondary-text">save_alt</mat-icon>
               </button>
-              <button type="button" mat-icon-button color="" matTooltip="Verified All" (click)="openConfirmDialog(row, 'Verification All Mission')" [disabled]="row.status_scheduler !== 'publish' || row.status_coin == 'Sudah Dikirim' || !permissionVerifikasiMisiAll?.ubah">
-                <mat-icon *ngIf="row.status_scheduler == 'publish' && row.status_coin !== 'Sudah Dikirim'" class="orange-500-fg">assignment_turned_in</mat-icon>
-                <mat-icon *ngIf="row.status_scheduler !== 'publish' || row.status_coin == 'Sudah Dikirim'" class="secondary-text">assignment_turned_in</mat-icon>
+              <button type="button" mat-icon-button color="" matTooltip="Verified All" (click)="openConfirmDialog(row, 'Verification All Mission')" [disabled]="row.verification_rate == null || row.status_coin == null || row.status_scheduler !== 'publish' || row.status_coin == 'Sudah Dikirim' || !permissionVerifikasiMisiAll?.ubah">
+                <mat-icon *ngIf="row.verification_rate !== null || row.status_coin !== null || row.status_scheduler == 'publish' && row.status_coin !== 'Sudah Dikirim'" class="orange-500-fg">assignment_turned_in</mat-icon>
+                <mat-icon *ngIf="row.verification_rate == null || row.status_coin == null || row.status_scheduler !== 'publish' || row.status_coin == 'Sudah Dikirim'" class="secondary-text">assignment_turned_in</mat-icon>
               </button>
-              <button type="button" mat-icon-button color="" matTooltip="Release Coin" (click)="openConfirmDialog(row, 'Release Coin On Index')" [disabled]="row.status_scheduler !== 'publish' || row.status_coin == 'Sudah Dikirim' || !permissionReleaseCoin?.ubah">
-                <mat-icon *ngIf="row.status_scheduler == 'publish' && row.status_coin !== 'Sudah Dikirim'" class="orange-500-fg">call_made</mat-icon>
-                <mat-icon *ngIf="row.status_scheduler !== 'publish' || row.status_coin == 'Sudah Dikirim'" class="secondary-text">call_made</mat-icon>
+              <button type="button" mat-icon-button color="" matTooltip="Release Coin" (click)="openConfirmDialog(row, 'Release Coin On Index')" [disabled]="row.verification_rate == null || row.status_coin == null || row.status_scheduler !== 'publish' || row.status_coin == 'Sudah Dikirim' || !permissionReleaseCoin?.ubah">
+                <mat-icon *ngIf="row.verification_rate !== null || row.status_coin !== null || row.status_scheduler == 'publish' && row.status_coin !== 'Sudah Dikirim'" class="orange-500-fg">call_made</mat-icon>
+                <mat-icon *ngIf="row.verification_rate == null || row.status_coin == null || row.status_scheduler !== 'publish' || row.status_coin == 'Sudah Dikirim'" class="secondary-text">call_made</mat-icon>
               </button>
               <!-- <button type="button" mat-icon-button color="primary"
                 [disabled]="row.status_scheduler === 'publish' || !permission?.hapus" matTooltip="Hapus"
